--- a/1.env
+++ b/1.env
@@ -1,5 +1,5 @@
 REACT_APP_API = 'http://localhost:5000/'
 JWT_SECRET = Up2date123$
-DATABASE_URL = postgresql://postgres:Up2date123$@localhost:5432/hrm
+DATABASE_URL = postgresql://postgres:priya@localhost:5432/hrDB
 HOST = http://localhost
 NODE_ENV = development
